# UR3eDTCourse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
0_pre_requisites/: 0_environment_setup.ipynb
DT-solution/models/: kinematic_model.ipynb  train_movement_time_model.ipynb
calibration/: optimize.py  utils.py
communication/: connect.yml  factory.py  protocol.py  rabbitmq.py
data/: from_0_to_90.csv  scenario_data.csv
data_logger/: log_data.py  produce_scenario.py
examples/: 0_running_the_mockup.ipynb  1_sending_ctrl_messages.ipynb  2_receiving_state_messages.ipynb  3_configuring_the_mockup.ipynb  4_kinematic_model_basics.ipynb
model/: 1_physical_twin.ipynb  joint_config.py
models/: 1_configuration_gen.ipynb  controller_model.py  model.py  parameters.json  robot_model.py  robotarmkinematics_model.py  trajectory_model.ipynb
services/: db_recorder_service.py  simulation_service.py
startup/: config.py  start_all_services.py  start_data_recorder.py  start_database_service.py  start_db_recorder_service.py  start_docker_influxdb.py  start_docker_network.py  start_docker_rabbitmq.py  start_sim_service.py  start_ur3e_mockup.py  startup.conf
startup/utils/: config.py  (+3 more)
tests/: test_comms.ipynb  test_db_service.py  test_robot_model.py  test_send_control_msg.py  test_simulation_service.py  test_simulation_service_rabbitmq.py  test_ur3e_service.py  test_ur3e_service_communication.py
ur3e_mockup/: Dockerfile  Dockerfile.arm  Dockerfile.x86
use_cases/: run_calibration.py
utils/: calculation_functions.py  configuration.py  constants.py  data_class.py
(+27 files in other folders)
